Eevee Next: Default Scene not Rendering Properly with Dithered Render Method #116709

Closed
opened 2024-01-02 13:51:16 +01:00 by Simon Thommes · 3 comments
Member

System Information
Operating system: Linux-6.6.7-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-01 12:59, hash: 98c6bded9844
Worked: (newest version of Blender that worked as expected)

Short description of error

Exact steps for others to reproduce the error
See Video

**System Information** Operating system: Linux-6.6.7-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-01-01 12:59, hash: `98c6bded9844` Worked: (newest version of Blender that worked as expected) **Short description of error** <video src="/attachments/ea9c02b7-f924-4bd0-b19a-1255dc960618" title="bug-eevee_next-rendering-2024-01-02_13.50.35.mp4" controls></video> **Exact steps for others to reproduce the error** See Video
Simon Thommes added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-01-02 13:51:17 +01:00

eevee next is broken for a while now #116548
and on windows it just crashes

eevee next is broken for a while now #116548 and on windows it just crashes
Member

Can confirm this specific thing

Can confirm this specific thing
Member

There were 2 separate issues here. Part of the Gbuffer is not being written to, so some material parameters are incorrect.
The other was position from depth reconstruction not working since 335d3a1b75, that one should be solved by 20ccaa9d67.

There were 2 separate issues here. Part of the Gbuffer is not being written to, so some material parameters are incorrect. The other was position from depth reconstruction not working since 335d3a1b75, that one should be solved by 20ccaa9d67.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-11 20:01:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116709
No description provided.