Fix #116709: EEVEE-Next: Missing gbuffer closure writes

Outdated subpass_transition layout after f4275cc4dfbe268ba5f6f14402117e00be7ee1e2